modify swag statement to display {token = "string"}
